--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <div class="info">
     
 
-      <img class="icon" src="location.png"><h3 class="text">XYZ University </h3><br>
+      <img class="icon" src="location.png"><h3 class="text"> Guru Tegh Bahadur 4th Centenary  </h3><br>
       <img class="icon" src="location.png"><h3 class="text">  Delhi </h3><br>
       <img class="icon" src="email-logo.png"><h3 class="text">123.321aditya@gmail.com</h3><br>
       <img class="icon" src="github-logo.png"><h3 class="text">crazycoder-12</h3><br>
